# Triangle

./: .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  start-demo.sh
.github/workflows/: ci.yml  deploy.yml
deploy/: nginx-triangle.conf  triangle-api.service
docs/: README.md  api.md  architecture.md  deploy.md  roadmap.md
server/: actionsApi.js  db.js  env.example.txt  escrowApi.js  escrowProgram.js  index.js  package-lock.json  package.json  rwaOracle.js
server/scripts/: create-database.sql  setup-db.js
solana-program/: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
solana-program/programs/triangle_escrow/: Cargo.toml
solana-program/programs/triangle_escrow/src/: lib.rs
solana-program/scripts/: create-rwa-token.cjs  demo-addresses.json  demo-mint.json  deploy-devnet-from-env.sh  mint-rwa-token-local.sh  run-fork-rwa-test.ps1  run-fork-rwa-test.sh  setup-devnet-demo.sh  start-mainnet-fork.ps1  start-mainnet-fork.sh  write-deploy-keypair.cjs  write-payer-from-server-env.cjs  wsl-anchor-test.sh  wsl-setup-solana-anchor.sh
solana-program/tests/: rwa-fork-mainnet.ts  rwa-mock-local.ts
web/: .env.development  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  AuthApiProvider.jsx  MissingPrivyConfig.jsx  authApiContext.js  formatAmount.js  formatLabTokenSupply.js  index.css  main.jsx  splTokenMetadataIx.js  useAuthApi.js  useIsSupport.js  useTriangleSolanaAddress.js  walletTxError.js
web/src/components/: AppLayout.jsx  CopyTextButton.jsx  (+5 more)
(+7 files in other folders)
