[package]
name = "triangle_escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "triangle_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Longer Pyth staleness window for forked mainnet (local validator) where feeds do not update.
fork-test = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["associated_token", "token"] }
pyth-solana-receiver-sdk = "1.1.0"
